fixing findbug problem